--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
     <title>Portfolio</title>
   </head>
   <body>
+    <ul>
+      <li><a href="#">Обо мне</a></li>
+      <li><a href="#">Портфолио</a></li>
+      <li><a href="#">Этапы работ</a></li>
+      <li><a href="#">Цены</a></li>
+      <li><a href="#">Обратная связь</a></li>
+    </ul>
+    <ul>
+      <li><a href="tel:+79237777777">8 923 777-77-77</a></li>
+      <li><a href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+    </ul>
+    <img src="img/photo.png" alt="photo">
     <p>Александр Антропов</p>
     <h1>web-разработчик</h1>
   </body>
