--- a/index.html
+++ b/index.html
@@ -6,29 +6,34 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <header>
-      <nav>
-        <ul class="nav">
-          <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
-        </ul>
-      </nav>
-      <ul>
-        <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
-        <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
-      </ul>
-    </header>
-    <img class="photo" src="img/photo.png" alt="photo">
-    <main>
-      <p class="name">Александр Антропов</p>
-      <h1 class="title-h1">web-разработчик</h1>
-    </main>
+    <div class="dark">
+      <div class="wrapper">
+        <header>
+          <nav>
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
+            </ul>
+          </nav>
+          <ul>
+            <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
+            <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+          </ul>
+        </header>
+        <img class="photo" src="img/photo.png" alt="photo">
+        <main>
+          <p class="name">Александр Антропов</p>
+          <h1 class="title-h1">web-разработчик</h1>
+        </main>
+      </div>
+    </div>
 <footer>
   
 </footer>
