--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
             </ul>
           </nav>
-          <ul>
+          <ul class="nav">
             <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
             <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
           </ul>
