--- a/index.html
+++ b/index.html
@@ -73,7 +73,32 @@
             </div>
           </div>
         </main>
-        <section></section>
+        <section class="section-about">
+          <div class="about">
+            <div class="about-item">
+              <p>Обо мне</p>
+            </div>
+            <div class="about-item">
+              <p>Создаю только эффективные решения, которые работают на результат: от одностраничных сайтов, до крупных интернет-порталов.</p>
+            </div>
+            <div class="about-item">
+              <h3 class="title-h3">Контроль</h3>
+              <p>Предоставление результатов на каждом этапе работы с возможностью внести правки</p>
+            </div>
+            <div class="about-item">
+              <h3 class="title-h3">Ответственность</h3>
+              <p>Фриланс как основная деятельность, что означает полную отдачу в процессе работы над заказом</p>
+            </div>
+            <div class="about-item">
+              <h3 class="title-h3">Исполнительность</h3>
+              <p>Внимательность ко всем требованиям заказчика и прояснение любых моментов</p>
+            </div>
+            <div class="about-item">
+              <h3 class="title-h3">Качество</h3>
+              <p>Высокое качество как графических материалов, так и внутренних алгоритмов работы сайта</p>
+            </div>
+          </div>
+        </section>
         <section class="section-steps">
           <div class="steps">
             <div class="steps-item">
