--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -75,27 +75,27 @@
         </main>
         <section class="section-about">
           <div class="about">
-            <div class="about-item">
+            <div class="about-item about-title">
               <p>Обо мне</p>
             </div>
-            <div class="about-item">
+            <div class="about-item about-description">
               <p>Создаю только эффективные решения, которые работают на результат: от одностраничных сайтов, до крупных интернет-порталов.</p>
             </div>
-            <div class="about-item">
+            <div class="about-item about-01">
               <h3 class="title-h3">Контроль</h3>
-              <p>Предоставление результатов на каждом этапе работы с возможностью внести правки</p>
+              <p class="description">Предоставление результатов на&nbspкаждом этапе работы с&nbspвозможностью внести правки</p>
             </div>
-            <div class="about-item">
+            <div class="about-item about-02">
               <h3 class="title-h3">Ответственность</h3>
-              <p>Фриланс как основная деятельность, что означает полную отдачу в процессе работы над заказом</p>
+              <p class="description">Фриланс как основная деятельность, что означает полную отдачу в&nbspпроцессе работы над заказом</p>
             </div>
-            <div class="about-item">
+            <div class="about-item about-03">
               <h3 class="title-h3">Исполнительность</h3>
-              <p>Внимательность ко всем требованиям заказчика и прояснение любых моментов</p>
+              <p class="description">Внимательность ко всем требованиям заказчика и&nbspпрояснение любых моментов</p>
             </div>
-            <div class="about-item">
+            <div class="about-item about-04">
               <h3 class="title-h3">Качество</h3>
-              <p>Высокое качество как графических материалов, так и внутренних алгоритмов работы сайта</p>
+              <p class="description">Высокое качество как графических материалов, так и внутренних алгоритмов работы сайта</p>
             </div>
           </div>
         </section>
