--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
               <svg class="circle circle-nav" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
                 <circle cx="126.5" cy="126.5" r="126.5"/>
               </svg>
-              <ul class="nav nav-info">
+              <ul class="nav nav-social">
                 <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
                 <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
@@ -79,19 +79,19 @@
               <p>Обо мне</p>
             </div>
             <div class="about-item about-description">
-              <p>Создаю только эффективные решения, которые работают на результат: от одностраничных сайтов, до крупных интернет-порталов.</p>
+              <p>Создаю только эффективные решения, которые работают на результат: от&nbsp;одностраничных сайтов, до крупных интернет-порталов.</p>
             </div>
             <div class="about-item about-01">
               <h3 class="title-h3">Контроль</h3>
-              <p class="description">Предоставление результатов на&nbspкаждом этапе работы с&nbspвозможностью внести правки</p>
+              <p class="description">Предоставление результатов на&nbsp;каждом этапе работы с&nbsp;возможностью внести правки</p>
             </div>
             <div class="about-item about-02">
               <h3 class="title-h3">Ответственность</h3>
-              <p class="description">Фриланс как основная деятельность, что означает полную отдачу в&nbspпроцессе работы над заказом</p>
+              <p class="description">Фриланс как основная деятельность, что означает полную отдачу в&nbsp;процессе работы над заказом</p>
             </div>
             <div class="about-item about-03">
               <h3 class="title-h3">Исполнительность</h3>
-              <p class="description">Внимательность ко всем требованиям заказчика и&nbspпрояснение любых моментов</p>
+              <p class="description">Внимательность ко всем требованиям заказчика и&nbsp;прояснение любых моментов</p>
             </div>
             <div class="about-item about-04">
               <h3 class="title-h3">Качество</h3>
