--- a/index.html
+++ b/index.html
@@ -403,8 +403,8 @@
             </div>
             <div class="tarif-item">
               <div class="tarif-header">
-                <p class="tarif-name">Разработка</br>лэндинга или сайт визитки</p>
-                <p class="tarif-text">Небольшой сайт состоящий из одной страницы</p>
+                <p class="tarif-name">Разработка<br>корпоративного сайта</p>
+                <p class="tarif-text">Небольшой сайт с n-количеством страниц</p>
               </div>
               <div class="tarif-footer">
                 <p class="project"><span>Обсудить проект</span><span class=project-img></span></p>
@@ -415,18 +415,18 @@
                 <p class="tarif-pack">Что входит</p>
                 <ul class="tarif-list">
                   <li class="tarif-list-item">Сайт на CMS WordPress</li>
-                  <li class="tarif-list-item">Одна посадочная страница</li>
-                  <li class="tarif-list-item">От 7 дней</li>
+                  <li class="tarif-list-item">От 2-10 страниц </li>
+                  <li class="tarif-list-item">От 15 дней</li>
                 </ul>
               </div>
               <div class="tarif-footer">
-                <p class="tarif-price">От 7 000 Р</p>                
+                <p class="tarif-price">От 10 000 Р</p>                
               </div>
             </div>
             <div class="tarif-item">
               <div class="tarif-header">
-                <p class="tarif-name">Разработка</br>лэндинга или сайт визитки</p>
-                <p class="tarif-text">Небольшой сайт состоящий из одной страницы</p>
+                <p class="tarif-name">Разработка</br>интернет - магазина</p>
+                <p class="tarif-text">Полноценный каталог вашей продукции</p>
               </div>
               <div class="tarif-footer">
                 <p class="project"><span>Обсудить проект</span><span class=project-img></span></p>
@@ -437,22 +437,70 @@
                 <p class="tarif-pack">Что входит</p>
                 <ul class="tarif-list">
                   <li class="tarif-list-item">Сайт на CMS WordPress</li>
-                  <li class="tarif-list-item">Одна посадочная страница</li>
-                  <li class="tarif-list-item">От 7 дней</li>
+                  <li class="tarif-list-item">От 2-10 страниц, корзина, карточка товара</li>
+                  <li class="tarif-list-item">От 20 дней</li>
                 </ul>
               </div>
               <div class="tarif-footer">
                 <svg class="circle circle-price" viewBox="0 0 253 253" xmlns="http://www.w3.org/2000/svg">
                   <circle cx="126.5" cy="126.5" r="126.5"/>
                 </svg>
-                <p class="tarif-price">От 7 000 Р</p>                
+                <p class="tarif-price">От 15 000 Р</p>                
               </div>
             </div>
         </section>
+        <section class="section-form">
+          <div class="form">
+            <div class="form-title">
+              <p>Расскажите<br>о своем проекте</p>
+            </div>
+            <div class="form-description">
+              <p>Воспользуйтесь формой обратной связи, чтобы обсудить ваш проект, заполните все поля, и я свяжусь с&nbsp;вами в ближайшее время</p>
+            </div>
+            <div class="form-item">
+              <ul class="nav nav-social">
+                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Vk</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Instagram</a></li>
+                <li class="nav-item"><a class="nav-link" href="#" target="_blank">Linkedin</a></li>
+              </ul>
+            </div>
+            <div class="form-item">
+              <form>
+                <label>Телефон или почта</label>
+                <input type="text" placeholder="Введите телефон">
+                  <label for="communicate">Выберите удобный способ связи</label>
+                  <select name="communicate" id="communicate">
+                    <option>Telegram</option>
+                    <option>WhatsApp</option>
+                    <option>Viber</option>
+                    <option>Звонок на телефон</option>
+                    <option>SMS сообщение</option>
+                  </select>
+                  <input type="submit" value="Отправить">                
+              </form>
+            </div>
+          </div>
+        </section>
+        <footer>
+          <div class="footer-top">
+            <ul class="nav">
+              <li class="nav-item"><a class="nav-link" href="#">Обо мне</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Портфолио</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Этапы работ</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Цены</a></li>
+              <li class="nav-item"><a class="nav-link" href="#">Обратная связь</a></li>
+            </ul>
+            <ul class="nav nav-info">
+              <li class="nav-item"><a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a></li>
+              <li class="nav-item"><a class="nav-link" href="mailto:alexdev@gmail.com">alexdev@gmail.com</a></li>
+            </ul>
+          </div>
+          <div class="footer-bottom">
+            <p>&copy;2020, Все права защищены</p>
+            <p>Сделано в рамках курса учебной платформы <a href="">Frontend Blok</a></p>
+          </div>
+        </footer>
       </div>
-      <footer>
-  
-      </footer>
     </div>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script/jquery-ui.min.js"></script>
@@ -460,6 +508,7 @@
       $( function() {
         $( "#tabs" ).tabs({ active: 0});
         $( document ).tooltip();
+        $( "communicate" ).selectmenu();
       } );
       $( ".tech-image" ).tooltip({
         position: {
