--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <div class="dark">
+    <div id="theme" class="dark">
       <div class="wrapper">
         <header>
           <nav>
@@ -31,8 +31,13 @@
         <div class="header-mobile">
           <a class="nav-link" href="tel:+79237777777">8 923 777-77-77</a>
           <button id="opener" class="menu">
-            <img src="img/icons/menu.svg" alt="Menu">
+            <svg class="burger-img" width="26" height="20" viewBox="0 0 26 20" xmlns="http://www.w3.org/2000/svg">
+              <rect width="26" height="2"/>
+              <rect y="9" width="26" height="2"/>
+              <rect y="18" width="26" height="2"/>
+              </svg>
           </button>
+
         </div>
         <div class="photo">
           <img src="img/photo.png" alt="photo">
@@ -513,41 +518,27 @@
             <p>&copy;2020, Все права защищены</p>
             <p>Сделано в рамках курса учебной платформы <a class="footer-link" href="">Frontend Blok</a></p>
           </div>
+          <div class="theme-btn">
+            <button id="dark"> Dark</button>
+            <button id="light">Light</button>
+          </div>
         </footer>
       </div>
     </div>
-    <div id="dialog" title="Basic dialog">
-      <p>This is an animated dialog which is useful for displaying information. The dialog window can be moved, resized and closed with the &apos;x&apos; icon.</p>
+    <div class="burger-open">
+      <ul class="burger-open-nav">
+        <li class="burger-open-nav-item"><a class="burger-open-nav-link" href="#">Обо мне</a></li>
+        <li class="burger-open-nav-item"><a class="burger-open-nav-link" href="#">Портфолио</a></li>
+        <li class="burger-open-nav-item"><a class="burger-open-nav-link" href="#">Этапы работ</a></li>
+        <li class="burger-open-nav-item"><a class="burger-open-nav-link" href="#">Цены</a></li>
+        <li class="burger-open-nav-item"><a class="burger-open-nav-link" href="#">Обратная связь</a></li>
+      </ul>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="script/jquery-ui.min.js"></script>
+    <script src="script/script.js"></script>
     <script>
-      $( function() {
-        $( "#tabs" ).tabs({ active: 0});
-        $( document ).tooltip();
-        $( "#communicate" ).selectmenu();
-        $( "#dialog" ).dialog({
-      autoOpen: false,
-      show: {
-        effect: "blind",
-        duration: 1000
-      },
-      hide: {
-        effect: "blind",
-        duration: 1000
-      }
-    });
-    $( "#opener" ).on( "click", function() {
-      $( "#dialog" ).dialog( "open" );
-    });
-      } );
-      $( ".tech-image" ).tooltip({
-        position: {
-        my: "center top",
-        at: "center bottom-10",
-        collision: "none"
-        }
-      });
     </script>
   </body>
 </html>
